# Musig_gpt_assignment_Senior_AI_Engineer

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  README.md  alembic.ini  db.py  docker-compose.yml  feedback.py  models.py  pyproject.toml  ranking.py  requirements.txt  search.py  seed.py  settings.py
alembic/: env.py
alembic/versions/: 20260429_0001_initial.py  20260502_0002_minilm_embedding_dimensions.py
scripts/: verify.ps1
