[project]
name = "musicgpt-search-integrity"
version = "0.1.0"
description = "MusicGPT technical assessment search integrity implementation"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pgvector==0.2.5",
    "sentence-transformers==3.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
